@@ -162,7 +162,7 @@ static void addProperty(sipSpec *pt, moduleDef *mod, classDef *cd,
 static moduleDef *configureModule(sipSpec *pt, moduleDef *module,
         const char *filename, const char *name, int version, int c_module,
         KwArgs kwargs, int use_arg_names, int all_raise_py_exc,
-        codeBlock *docstring);
+        int all_throw_cpp_exc, codeBlock *docstring);
 static void addAutoPyName(moduleDef *mod, const char *remove_leading);
 static KwArgs convertKwArgs(const char *kwargs);
 static void checkAnnos(optFlags *annos, const char *valid[]);
@@ -347,6 +347,7 @@ static void handleKeepReference(optFlags *optflgs, argDef *ad, moduleDef *mod);
 %token          TK_TYPE
 %token          TK_USEARGNAMES
 %token          TK_ALLRAISEPYEXC
+%token          TK_ALLTHROWCPPEXC
 %token          TK_VERSION
 
 %type <memArg>          argvalue
@@ -1652,7 +1653,8 @@ module: TK_MODULE module_args module_body {
                 currentModule = configureModule(currentSpec, currentModule,
                         currentContext.filename, $2.name, $2.version,
                         $2.c_module, $2.kwargs, $2.use_arg_names,
-                        $2.all_raise_py_exc, $3.docstring);
+                        $2.all_raise_py_exc, $2.all_throw_cpp_exc,
+                        $3.docstring);
         }
     |   TK_CMODULE dottedname optnumber {
             deprecated("%CModule is deprecated, use %Module and the 'language' argument instead");
@@ -1660,7 +1662,7 @@ module: TK_MODULE module_args module_body {
             if (notSkipping())
                 currentModule = configureModule(currentSpec, currentModule,
                         currentContext.filename, $2, $3, TRUE, defaultKwArgs,
-                        FALSE, FALSE, NULL);
+                        FALSE, FALSE, FALSE, NULL);
         }
     ;
 
@@ -1675,6 +1677,7 @@ module_args:    dottedname optnumber {
             $$.name = $1;
             $$.use_arg_names = FALSE;
             $$.all_raise_py_exc = FALSE;
+            $$.all_throw_cpp_exc = FALSE;
             $$.version = $2;
         }
     |   '(' module_arg_list ')' {
@@ -1693,6 +1696,7 @@ module_arg_list:    module_arg
             case TK_NAME: $$.name = $3.name; break;
             case TK_USEARGNAMES: $$.use_arg_names = $3.use_arg_names; break;
             case TK_ALLRAISEPYEXC: $$.all_raise_py_exc = $3.all_raise_py_exc; break;
+            case TK_ALLTHROWCPPEXC: $$.all_throw_cpp_exc = $3.all_throw_cpp_exc; break;
             case TK_VERSION: $$.version = $3.version; break;
             }
         }
@@ -1706,6 +1710,7 @@ module_arg: TK_KWARGS '=' TK_STRING_VALUE {
             $$.name = NULL;
             $$.use_arg_names = FALSE;
             $$.all_raise_py_exc = FALSE;
+            $$.all_throw_cpp_exc = FALSE;
             $$.version = -1;
         }
     |   TK_LANGUAGE '=' TK_STRING_VALUE {
@@ -1722,6 +1727,7 @@ module_arg: TK_KWARGS '=' TK_STRING_VALUE {
             $$.name = NULL;
             $$.use_arg_names = FALSE;
             $$.all_raise_py_exc = FALSE;
+            $$.all_throw_cpp_exc = FALSE;
             $$.version = -1;
         }
     |   TK_NAME '=' dottedname {
@@ -1732,6 +1738,7 @@ module_arg: TK_KWARGS '=' TK_STRING_VALUE {
             $$.name = $3;
             $$.use_arg_names = FALSE;
             $$.all_raise_py_exc = FALSE;
+            $$.all_throw_cpp_exc = FALSE;
             $$.version = -1;
         }
     |   TK_USEARGNAMES '=' bool_value {
@@ -1742,6 +1749,7 @@ module_arg: TK_KWARGS '=' TK_STRING_VALUE {
             $$.name = NULL;
             $$.use_arg_names = $3;
             $$.all_raise_py_exc = FALSE;
+            $$.all_throw_cpp_exc = FALSE;
             $$.version = -1;
         }
     |   TK_ALLRAISEPYEXC '=' bool_value {
@@ -1752,6 +1760,18 @@ module_arg: TK_KWARGS '=' TK_STRING_VALUE {
             $$.name = NULL;
             $$.use_arg_names = FALSE;
             $$.all_raise_py_exc = $3;
+            $$.all_throw_cpp_exc = FALSE;
+            $$.version = -1;
+        }
+    |   TK_ALLTHROWCPPEXC '=' bool_value {
+            $$.token = TK_ALLTHROWCPPEXC;
+
+            $$.c_module = FALSE;
+            $$.kwargs = defaultKwArgs;
+            $$.name = NULL;
+            $$.use_arg_names = FALSE;
+            $$.all_raise_py_exc = FALSE;
+            $$.all_throw_cpp_exc = $3;
             $$.version = -1;
         }
     |   TK_VERSION '=' TK_NUMBER_VALUE {
@@ -1765,6 +1785,7 @@ module_arg: TK_KWARGS '=' TK_STRING_VALUE {
             $$.name = NULL;
             $$.use_arg_names = FALSE;
             $$.all_raise_py_exc = FALSE;
+            $$.all_throw_cpp_exc = FALSE;
             $$.version = $3;
         }
     ;
@@ -4600,11 +4621,11 @@ static exceptionDef *findException(sipSpec *pt, scopedNameDef *fqname, int new)
             return xd;
 
     /*
-     * If it is an exception interface file then we have never seen this
-     * name before.  We require that exceptions are defined before being
-     * used, but don't make the same requirement of classes (for reasons of
-     * backwards compatibility).  Therefore the name must be reinterpreted
-     * as a (as yet undefined) class.
+     * If it is an exception interface file then we have never seen this name
+     * before.  We require that exceptions are defined before being used, but
+     * don't make the same requirement of classes (for reasons of backwards
+     * compatibility).  Therefore the name must be reinterpreted as a (as yet
+     * undefined) class.
      */
     if (new)
     {
@@ -6541,6 +6562,7 @@ static void newFunction(sipSpec *pt, moduleDef *mod, classDef *c_scope,
         "NoArgParser",
         "NoCopy",
         "NoRaisesPyException",
+        "NoThrowsCppException",
         "Numeric",
         "PostHook",
         "PreHook",
@@ -6548,6 +6570,7 @@ static void newFunction(sipSpec *pt, moduleDef *mod, classDef *c_scope,
         "PyName",
         "RaisesPyException",
         "ReleaseGIL",
+        "ThrowsCppException",
         "Transfer",
         "TransferBack",
         "TransferThis",
@@ -6734,6 +6757,12 @@ static void newFunction(sipSpec *pt, moduleDef *mod, classDef *c_scope,
 
         if (factory || xferback)
             setIsTransferVH(vhd);
+
+        if (getOptFlag(optflgs, "NoThrowsCppException", bool_flag) == NULL)
+        {
+            if (allThrowCppException(mod) || getOptFlag(optflgs, "ThrowsCppException", bool_flag) != NULL)
+                setThrowsCppException(vhd);
+        }
 
         /*
          * Only add it to the module's virtual handlers if we are not in a
@@ -8399,7 +8428,7 @@ static void addProperty(sipSpec *pt, moduleDef *mod, classDef *cd,
 static moduleDef *configureModule(sipSpec *pt, moduleDef *module,
         const char *filename, const char *name, int version, int c_module,
         KwArgs kwargs, int use_arg_names, int all_raise_py_exc,
-        codeBlock *docstring)
+        int all_throw_cpp_exc, codeBlock *docstring)
 {
     moduleDef *mod;
 
@@ -8429,6 +8458,9 @@ static moduleDef *configureModule(sipSpec *pt, moduleDef *module,
 
     if (all_raise_py_exc)
         setAllRaisePyException(module);
+
+    if (all_throw_cpp_exc)
+        setAllThrowCppException(module);
 
     if (use_arg_names)
         setUseArgNames(module);
